Add Class 11 subjects to index.htm
Added Class 11 section with PCM and PCB subjects.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
 </ul>
 
 <footer>
-<p>© 2025 Free Study Notes</p>
 </footer>
+  <h2>Class 11</h2>
+
+<h3>PCM</h3>
+<a href="class11/pcm/maths.html">Maths</a><br>
+<a href="class11/pcm/physics.html">Physics</a><br>
+<a href="class11/pcm/chemistry.html">Chemistry</a><br>
+
+<h3>PCB</h3>
+<a href="class11/pcb/physics.html">Physics</a><br>
+<a href="class11/pcb/chemistry.html">Chemistry</a><br>
+<a href="class11/pcb/biology.html">Biology</a><br>
 
 </body>
 </html>
