--- a/index.html
+++ b/index.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Study Notes | Class 6–12</title>
-</head>
-<body>
-
-<h1>📘 Study Notes Website</h1>
-
-<h2>Class 11</h2>
-
-<h3>PCM</h3>
-<a href="class11/pcm/maths.html">Maths</a><br>
-<a href="class11/pcm/physics.html">Physics</a><br>
-<a href="class11/pcm/chemistry.html">Chemistry</a><br>
-
-<h3>PCB</h3>
-<a href="class11/pcb/physics.html">Physics</a><br>
-<a href="class11/pcb/chemistry.html">Chemistry</a><br>
-<a href="class11/pcb/biology.html">Biology</a><br>
-
-<hr>
-
-<h2>Class 12</h2>
-
-<h3>PCM</h3>
-<a href="class12/pcm/maths.html">Maths</a><br>
-<a href="class12/pcm/physics.html">Physics</a><br>
-<a href="class12/pcm/chemistry.html">Chemistry</a><br>
-
-<h3>PCB</h3>
-<a href="class12/pcb/physics.html">Physics</a><br>
-<a href="class12/pcb/chemistry.html">Chemistry</a><br>
-<a href="class12/pcb/biology.html">Biology</a><br>
-
-</body>
-</html>
+<a href="class12.html">Class 12 Notes</a>
