Add basic structure to index.html for study notes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<a href="class12.html">Class 12 Notes</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Study Notes - Class 6 to 12</title>
+</head>
+<body>
+
+<h1>📚 Study Notes Website</h1>
+<p>Free notes for Class 6 to 12 (Hindi / English / Hinglish)</p>
+
+<hr>
+
+<h2>Class 6</h2>
+<ul>
+    <li><a href="class6_maths.html">Mathematics</a></li>
+</ul>
+
+<h2>Class 11</h2>
+<ul>
+    <li>PCM (Maths, Physics, Chemistry)</li>
+    <li>PCB (Physics, Chemistry, Biology)</li>
+</ul>
+
+<h2>Class 12</h2>
+<ul>
+    <li><a href="class12.html">All Subjects Notes</a></li>
+</ul>
+
+<hr>
+
+<p>Website under development 🚧</p>
+
+</body>
+</html>
