--- a/index.html
+++ b/index.html
@@ -2,34 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Study Notes - Class 6 to 12</title>
+    <title>Study Notes Hub</title>
 </head>
 <body>
 
-<h1>📚 Study Notes Website</h1>
-<p>Free notes for Class 6 to 12 (Hindi / English / Hinglish)</p>
+<h1>Study Notes Hub</h1>
+<p>Class 6 to 12 – Free Notes</p>
 
 <hr>
 
-<h2>Class 6</h2>
-<ul>
-    <li><a href="class6_maths.html">Mathematics</a></li>
-</ul>
+<h2>Class 11 & 12 Streams</h2>
 
-<h2>Class 11</h2>
 <ul>
-    <li>PCM (Maths, Physics, Chemistry)</li>
-    <li>PCB (Physics, Chemistry, Biology)</li>
-</ul>
-
-<h2>Class 12</h2>
-<ul>
-    <li><a href="class12.html">All Subjects Notes</a></li>
+    <li><a href="pcm.html">PCM (Physics, Chemistry, Maths)</a></li>
+    <li><a href="pcb.html">PCB (Physics, Chemistry, Biology)</a></li>
+    <li><a href="commerce.html">Commerce</a></li>
+    <li><a href="humanities.html">Humanities</a></li>
 </ul>
 
 <hr>
 
-<p>Website under development 🚧</p>
+<p>Website under development</p>
 
 </body>
 </html>
