--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
 <ul>
     <li><a href="pcm.html">PCM (Physics, Chemistry, Maths)</a></li>
     <li><a href="pcb.html">PCB (Physics, Chemistry, Biology)</a></li>
-    <li><a href="commerce.html">Commerce</a></li>
-    <li><a href="humanities.html">Humanities</a></li>
+    <li><a href="commerce.html">Commerce (Accounts, Economics, Business Studies)</a></li>
+    <li><a href="humanities.html">Humanities (History, Geography, Political Science)</a></li>
+</ul>
+
+<hr>
+
+<h2>Other Classes</h2>
+<ul>
+    <li><a href="class6-maths.html">Class 6 Maths</a></li>
+    <li><a href="class7-maths.html">Class 7 Maths</a></li>
+    <li><a href="class8-maths.html">Class 8 Maths</a></li>
+    <li><a href="class9-maths.html">Class 9 Maths</a></li>
+    <li><a href="class10-maths.html">Class 10 Maths</a></li>
 </ul>
 
 <hr>
